--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -23,6 +23,10 @@
                 <span class="mx-2">Tableau de bord</span>
                 </li>
                 <hr class="sidebar-divider my-0">
+                <li>
+                    <a href={{path ('gestion_admins')}} class="nav-link"><i class="fas fa-user-shield"></i>Admins</a>
+                </li>
+                <hr class="sidebar-divider my-0">
                 <!-- Menu déroulant test -->
                 <li>
                     <div class="accordion accordion-flush" id="accordionFlushExample">
@@ -34,7 +38,7 @@
                             </h2>
                             <div id="flush-collapseUser" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
-                                <a href="#" class="nav-link"><i class="fas fa-user-shield"></i>Admins</a>
+                                
                                 <a href="#" class="nav-link"><i class="fas fa-tint"></i>Donneurs</a>  
                             </div>
                         </div>    
