--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -27,41 +27,10 @@
                     <a href={{path ('gestion_admins')}} class="nav-link"><i class="fas fa-user-shield"></i>Admins</a>
                 </li>
                 <hr class="sidebar-divider my-0">
-                <!-- Menu déroulant test -->
                 <li>
-                    <div class="accordion accordion-flush" id="accordionFlushExample">
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="flush-headingOne">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseUser" aria-expanded="false" aria-controls="flush-collapseUser">
-                                <i class="fas fa-users"></i> Utilisateurs
-                            </button>
-                            </h2>
-                            <div id="flush-collapseUser" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">
-                                
-                                <a href="#" class="nav-link"><i class="fas fa-tint"></i>Donneurs</a>  
-                            </div>
-                        </div>    
-                    </div>
-                </li>
-                <!-- /Menu déroulant test -->
-                <hr class="sidebar-divider my-0">
-                <li>
-                    <a href="#" class="nav-link"><i class="fas fa-shopping-cart"></i>Clients</a>
+                    <a href={{ path ('gestion_etablissements')}} class="nav-link"><i class="fas fa-building"></i>Maternités</a>
                 </li>
                 <hr class="sidebar-divider my-0">
-                <li>
-                    <a href="#" class="nav-link"><i class="fas fa-lightbulb"></i>Projets</a>
-                </li>
-                <hr class="sidebar-divider my-0">
-                <li href="#" class="nav-link">
-                <span class="mx-2">toujours un test</span>
-                </li>
-                <hr class="sidebar-divider my-0">
-                <li href="#" class="nav-link">
-                <span class="mx-2">encore des choses</span>
-                </li>
-
             </ul>
         </div>
         <!-- \SideBar -->
