--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -31,6 +31,10 @@
                     <a href={{ path ('gestion_etablissements')}} class="nav-link"><i class="fas fa-building"></i>Maternités</a>
                 </li>
                 <hr class="sidebar-divider my-0">
+                <li>
+                    <a href={{ path ('gestion_temoignages')}} class="nav-link"><i class="fas fa-comment-alt"></i>témoignages</a>
+                </li>
+                
             </ul>
         </div>
         <!-- \SideBar -->
