--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -34,6 +34,11 @@
                 <li>
                     <a href={{ path ('gestion_temoignages')}} class="nav-link"><i class="fas fa-comment-alt"></i>témoignages</a>
                 </li>
+                <hr class="sidebar-divider my-0">
+                <li>
+                    <a href={{ path ('gestion_temoignages')}} class="nav-link"><i class="far fa-newspaper"></i>actualités</a>
+                </li>
+                
                 
             </ul>
         </div>
