--- a/templates/admin/actus/EditActu.html.twig
+++ b/templates/admin/actus/EditActu.html.twig
@@ -1,14 +1,14 @@
 
 {% extends "admin/admin.html.twig" %}
 
-{% block title %}Modifier l'établissement{% endblock %}
+{% block title %}Modifier l'actualité{% endblock %}
 
 {% block stylesheets %}{% endblock %}
 
 {% block body %}
     <div class="container mt-4">
-        <h1>Modifier les informations de l'établissement</h1>
-        {{ include ("admin/etablissements/FormEtablissement.html.twig", {form: form, button: 'Enregistrer'}) }}
+        <h1>Modifier les informations de l'actualité</h1>
+        {{ include ("admin/actus/FormActu.html.twig", {form: form, button: 'Enregistrer'}) }}
     </div>
 
 {% endblock %}
