--- a/templates/admin/actus/ShowActus.html.twig
+++ b/templates/admin/actus/ShowActus.html.twig
@@ -9,7 +9,7 @@
     <div class="container">
 
         <!-- creer actualité-->
-        <a class="btn btn-outline-primary" href={{ path ('create_etablissement')}}>
+        <a class="btn btn-outline-primary" href={{ path ('create_actu')}}>
             <i class="fas fa-plus"></i>Créer un actualité
         </a>
         <!-- /creer actualité-->
@@ -17,31 +17,31 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                <th scope="col">Nom de l'actualité</th>
-                <th scope="col">Adresse</th>
+                <th scope="col">Titre</th>
+                <th scope="col">Sous-titre</th>
                 <th scope="col">Modifier</th>
                 <th scope="col">Supprimer</th>
                 </tr>
             </thead>
             <tbody id="affiche-admins">
-                {% for etablissement in etablissements %}
+                {% for actu in actus %}
                     <tr>
                         <th scope="row">
-                            {{etablissement.Nom}}
+                            {{actu.titre}}
                         </th>
                         <th>
-                            {{etablissement.adresse}}, {{etablissement.ville}}, {{etablissement.codePostal}}
+                            {{actu.sousTitre}}
                         </th>
                         <td>
-                            <a href={{ path ('edit_etablissement', {id: etablissement.id})}} type="button" class="btn btn-warning"><i class="fas fa-cog"></i></a>
+                            <a href={{ path ('edit_actu', {id: actu.id})}} type="button" class="btn btn-warning"><i class="fas fa-cog"></i></a>
                         </td>
                         <td>
                             <!-- Boutton modal delete-->
-                            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#confirmDelete{{etablissement.id}}"><i class="fas fa-trash-alt"></i></button>
+                            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#confirmDelete{{actu.id}}"><i class="fas fa-trash-alt"></i></button>
                             <!-- /Boutton modal delete-->
                             <!-- modal delete-->
-                            <div id="modal-delete{{etablissement.id}}">
-                                <div class="modal fade" id="confirmDelete{{etablissement.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div id="modal-delete{{actu.id}}">
+                                <div class="modal fade" id="confirmDelete{{actu.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                     <div class="modal-dialog">
                                         <div class="modal-content">
                                             <div class="modal-header">
@@ -50,11 +50,11 @@
                                                 </h5>
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                                 </div>
-                                                    <form id="delete{{etablissement.id}}" method="post" action={{ path ('delete_etablissement', {id: etablissement.id})}}>
+                                                    <form id="delete{{actu.id}}" method="post" action={{ path ('delete_actu', {id: actu.id})}}>
                                                         <div class="modal-body">
-                                                            <h5>Identifiant : {{etablissement.id}}</h5>
+                                                            <h5>Titre de l'actualité : {{actu.titre}}</h5>
                                                             <br>
-                                                            <h5>Nom de l'actualité : {{etablissement.Nom}}</h5>
+                                                            <h5>Sous-titre de l'actualité : {{actu.sousTitre}}</h5>
                                                             <br>
                                                             <h5><strong>Cette action est irréversible</strong></h5>
                                                             <input type="hidden" name="_method" value="DELETE">
@@ -79,7 +79,7 @@
         </table>
         {# display navigation #}
         <div class="navigation">
-            {{ knp_pagination_render(etablissements) }}
+            {{ knp_pagination_render(actus) }}
         </div>
     </div>
     
