--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -36,7 +36,7 @@
                 </li>
                 <hr class="sidebar-divider my-0">
                 <li>
-                    <a href={{ path ('gestion_temoignages')}} class="nav-link"><i class="far fa-newspaper"></i>actualités</a>
+                    <a href={{ path ('gestion_actus')}} class="nav-link"><i class="far fa-newspaper"></i>actualités</a>
                 </li>
                 
                 
