--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -38,7 +38,7 @@
                 <li>
                     <a href={{ path ('gestion_actus')}} class="nav-link"><i class="far fa-newspaper"></i>actualités</a>
                 </li>
-                
+                <hr class="sidebar-divider my-0">
                 
             </ul>
         </div>
