--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,16 +2,23 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
-        {% endblock %}
+        <link rel="stylesheet" href={% block stylesheets %}{% endblock %}>
+        <link rel="stylesheet" href={{asset ('css/base.css')}}>
+        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}?v=2" />
  
     </head>
-    <body>
-        {% block body %}{% endblock %}
+    <body class="grid">
+        <div class="header">
+            le header
+        </div>
+        <div class="main">
+            {% block body %}{% endblock %}
+        </div>
+        <div class="footer">
+            le footer
+        </div>
     </body>
 
     {% block javascripts %}
