--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,16 +1,26 @@
+html, body{
+    margin: 0;
+    height: 100%;
+    width: 100%;
+}
+
+
 .grid{
     background-color: aqua;
     display: grid;
-    grid-template: [header-start] ". header ." 60px [header-end]
-                    [main-start] ". main ."  [main-end]
-                    [footer-start] ". footer ." 60px [footer-end]
+    min-height: 100%;
+    grid-template: [header-start] ". header ." auto [header-end]
+                    [main-start] ". main ." 1fr [main-end]
+                    [footer-start] ". footer ." auto [footer-end]
                     / 12% auto 12%;
 }
 
 
 .header{
+    height: 60px;
     grid-area: header;
     background-color: blue;
+    overflow: hidden;
 }
 
 .main{
@@ -19,6 +29,17 @@
 }
 
 .footer{
+    height: 60px;
     grid-area: footer;
     background-color: chocolate;
+}
+
+.header a{
+    float: right;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    color: lightcoral;
+    border: 1px solid green;
 }
