--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,10 +16,10 @@
 
                 <a id="logo" class="nav-link" href="/" >Logo</a>
 
-                <a class="nav-link" href="#" >F.A.Q</a>
-                <a class="nav-link" href="#" > Quand ?</a>
+                <a class="nav-link" href={{path ('faq')}} >FAQ</a>
+                <a class="nav-link" href={{path ('quand')}} > Quand ?</a>
                 <a class="nav-link" href="#" >Où ?</a>
-                <a class="nav-link" href="#" >Comment ?</a>
+                <a class="nav-link" href={{path ('comment')}} >Comment ?</a>
                 <a class="nav-link" href="#" >Pourquoi ?</a>
                 <a class="nav-link" href="#" >Qu'est ce que le don de sang placentaire ?</a>
                 <a class="nav-link" href={{path ('about')}} >Qui sommes nous ?</a>
