--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="stylesheet" href={% block stylesheets %}{% endblock %}>
-        <link rel="stylesheet" href={{asset ('css/base.css')}}>
+        <link rel="stylesheet" href={{asset ('css/base.scss')}}>
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}?v=2" />
  
     </head>
