--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -6,7 +6,7 @@
 
 {% block stylesheets %}{% endblock %}
 
-{% block body %}Hell0 w0rld{% endblock %}
+{% block body %}La homepage{% endblock %}
 
 {% block javascripts %}{% endblock %}
 
