--- a/templates/admin/admins/CreateAdmins.html.twig
+++ b/templates/admin/admins/CreateAdmins.html.twig
@@ -1,13 +1,13 @@
 
 {% extends "admin/admin.html.twig" %}
 
-{% block title %}Créer un établissement{% endblock %}
+{% block title %}Créer un administrateur{% endblock %}
 
 {% block stylesheets %}{% endblock %}
 
 {% block body %}
     <div class="container mt-4">
-        <h1>Créer un nouvel établissement</h1>
+        <h1>Créer un nouvel administrateur</h1>
         {{ include ("admin/admins/FormAdmins.html.twig", {form: form, button: 'Créer'}) }}
     </div>
 
