--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="stylesheet" href={% block stylesheets %}{% endblock %}>
-        {{ encore_entry_link_tags('app') }}
+        {% block stylesheets %}{% endblock %}
+        {{ encore_entry_link_tags('/scss/base') }}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}?v=2" />
  
     </head>
