--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -1,3 +1,8 @@
+
+$pastel : #cec0d6;
+
+$fond :#fffdf0;
+
 html, body{
   margin: 0;
   height: 100%;
@@ -6,10 +11,10 @@ html, body{
 
 
 .grid{
-  background-color: aqua;
+  background-color: $fond;
   display: grid;
   min-height: 100%;
-  grid-template: [header-start] ". header ." auto [header-end]
+  grid-template: [header-start] "header header header" auto [header-end]
                   [main-start] ". main ." 1fr [main-end]
                   [footer-start] ". footer ." auto [footer-end]
                   / 12% auto 12%;
@@ -17,57 +22,69 @@ html, body{
 
 
 .header{
-  height: 60px;
+  height: 150px;
   grid-area: header;
-  background-color: blue;
+  background-color: $pastel;
   overflow: hidden;
 }
 
 .main{
   grid-area: main;
-  background-color: blueviolet;
+  background-color: #fffdf0;
+  font-size: 400;
+  line-height: 20px;
+}
+
+.main p{
+  font-family: 'Hind Siliguri', sans-serif;
+}
+.main h1{
+  font-family: 'Karla', sans-serif;
+  font-size: 2.5em;
+  margin-bottom: 1.5em;
+}
+
+.main h2{
+  font-family: 'Karla', sans-serif;
+  font-size: 1.5em;
+  margin-bottom: 1em;
 }
 
 .footer{
   height: 60px;
   grid-area: footer;
-  background-color: chocolate;
+  background-color: $pastel;
 }
 
 #logo{
   float: left;
 }
 
-.nav-link{
-  float: right;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  color: lightcoral;
-  border: 1px solid green;
-}
 
 
 
 nav {
-  margin: 25px;
-  background: #f9f9f9;
+  
+  background: $pastel;
   padding: 16px;
   .menuItems {
     list-style: none;
-    display: flex;
     li {
       margin: 50px;
 
       a {
+        font-family: 'Karla', sans-serif;
         text-decoration: none;
-        color: #8f8f8f;
         font-size: 24px;
         font-weight: 400;
         transition: all 0.5s ease-in-out;
         position: relative;
         text-transform: uppercase;
+
+        float: right;
+        text-align: center;
+        color: black;
+        border: 1px solid green;
 
         &::before {
           content: attr(data-item);
