--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -8,8 +8,8 @@
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-        <link rel="stylesheet" href={% block stylesheets %}{% endblock %}>
-        <link rel="stylesheet" href={{asset ('css/admin.css')}}>
+        {% block stylesheets %}{% endblock %}
+        {{ encore_entry_link_tags('/scss/admin') }}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}?v=2" />
 
     </head>
