--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -14,9 +14,9 @@ html, body{
   background-color: $fond;
   display: grid;
   min-height: 100%;
-  grid-template: [header-start] "header header header" auto [header-end]
-                  [main-start] ". main ." 1fr [main-end]
-                  [footer-start] ". footer ." auto [footer-end]
+  grid-template: "header header header" auto
+                  ". main ." 1fr
+                  "footer footer footer" auto
                   / 12% auto 12%;
 }
 
@@ -33,11 +33,9 @@ html, body{
   background-color: #fffdf0;
   font-size: 400;
   line-height: 20px;
-}
-
-.main p{
   font-family: 'Hind Siliguri', sans-serif;
 }
+
 .main h1{
   font-family: 'Karla', sans-serif;
   font-size: 2.5em;
@@ -51,44 +49,38 @@ html, body{
 }
 
 .footer{
-  height: 60px;
+  height: 100px;
   grid-area: footer;
   background-color: $pastel;
 }
+
+.footer-grid{
+  grid-column-start: 2 ;
+}
+
 
 #logo{
   float: left;
 }
 
-
-
-
-nav {
   
-  background: $pastel;
-  padding: 16px;
+nav{
   .menuItems {
+    grid-column: 2 / 3 ;
     list-style: none;
     li {
       margin: 50px;
-
+  
       a {
         font-family: 'Karla', sans-serif;
         text-decoration: none;
-        font-size: 24px;
-        font-weight: 400;
-        transition: all 0.5s ease-in-out;
-        position: relative;
-        text-transform: uppercase;
-
+        font-size: 1.5em;
         float: right;
-        text-align: center;
         color: black;
-        border: 1px solid green;
-
+  
         &::before {
           content: attr(data-item);
-          transition: 0.5s;
+          transition: 2s;
           color: #8254ff;
           position: absolute;
           top: 0;
@@ -98,14 +90,15 @@ nav {
           width: 0;
           overflow: hidden;
         }
-
+  
         &:hover {
           &::before {
             width: 100%;
-            transition: all 0.5s ease-in-out;
+            transition: all 2s ease-in-out;
           }
         }
       }
     }
   }
 }
+
