--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -14,22 +14,19 @@ html, body{
   background-color: $fond;
   display: grid;
   min-height: 100%;
-  grid-template: "header header header" auto
-                  ". main ." 1fr
-                  "footer footer footer" auto
-                  / 12% auto 12%;
+  grid-template: auto 1fr auto / 12% auto 12%;
 }
 
 
 .header{
   height: 150px;
-  grid-area: header;
+  grid-area: 1 / 1 / 2 / 4;
   background-color: $pastel;
   overflow: hidden;
 }
 
 .main{
-  grid-area: main;
+  grid-area: 2 / 2 / 3 / 3;
   background-color: #fffdf0;
   font-size: 400;
   line-height: 20px;
@@ -50,13 +47,15 @@ html, body{
 
 .footer{
   height: 100px;
-  grid-area: footer;
+  grid-area: 3 / 1 / 4 / 4;
   background-color: $pastel;
 }
 
-.footer-grid{
-  grid-column-start: 2 ;
+.footerGrid{
+  grid-area: 3 / 2 / 4 / 3;
 }
+
+
 
 
 #logo{
