--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -23,79 +23,106 @@ html, body{
   grid-area: 1 / 1 / 2 / 4;
   background-color: $pastel;
   overflow: hidden;
+  box-shadow: 0px 3px black;
 }
 
 .main{
   grid-area: 2 / 2 / 3 / 3;
+  margin-top: 2em;
   background-color: #fffdf0;
   font-size: 400;
   line-height: 20px;
   font-family: 'Hind Siliguri', sans-serif;
-}
-
-.main h1{
-  font-family: 'Karla', sans-serif;
-  font-size: 2.5em;
-  margin-bottom: 1.5em;
-}
-
-.main h2{
-  font-family: 'Karla', sans-serif;
-  font-size: 1.5em;
-  margin-bottom: 1em;
+  h1{
+    font-family: 'Karla', sans-serif;
+    font-size: 2.5em;
+    margin-bottom: 1.5em;
+  }
+  h2{
+    font-family: 'Karla', sans-serif;
+    font-size: 1.5em;
+    margin-bottom: 1em;
+  }
 }
 
 .footer{
   height: 100px;
   grid-area: 3 / 1 / 4 / 4;
   background-color: $pastel;
+  box-shadow: 0px -3px black;
 }
 
-.footerGrid{
+.footerContent{
   grid-area: 3 / 2 / 4 / 3;
+  font-family: 'Hind Siliguri', sans-serif;
+  display: flex;
+  align-items: center;
+  a{
+    margin-right: 1em;
+    font-family: 'Karla', sans-serif;
+    font-size: 1em;
+    color: black;
+    text-decoration: none;
+  }
 }
 
-
-
-
-#logo{
-  float: left;
-}
-
-  
-nav{
-  .menuItems {
-    grid-column: 2 / 3 ;
+.navbar{
+  grid-area: 1 / 2 / 2 / 3;
+  position: relative;
+  #logo{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 64px;
+    width: 64px;
+    margin: 1.5em;
+  }
+  .network{
+    position: absolute;
+    right: 0;
+    a{
+      margin-left: 0.5em;
+      margin-top: 0.75em;
+    }
+  }
+  ul{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 0;
+    margin: 0;
     list-style: none;
-    li {
-      margin: 50px;
-  
-      a {
+    /* position: -webkit-sticky;
+    position: sticky;
+    top: 0; */
+    li{
+      float: left;
+      margin-bottom: 1.5em;
+      margin-left: 0.5em;
+      a{
         font-family: 'Karla', sans-serif;
-        text-decoration: none;
-        font-size: 1.5em;
-        float: right;
+        font-size: 1.4em;
+        display: inline-block;
+        position: relative;
         color: black;
-  
-        &::before {
-          content: attr(data-item);
-          transition: 2s;
-          color: #8254ff;
-          position: absolute;
-          top: 0;
-          bottom: 0;
-          left: 0;
-          right: 0;
-          width: 0;
-          overflow: hidden;
-        }
-  
-        &:hover {
-          &::before {
-            width: 100%;
-            transition: all 2s ease-in-out;
-          }
-        }
+        text-decoration: none;
+        padding-bottom: 4px;
+      }
+      a:before {    
+        content: "";
+        display: block;
+        height: 3px;
+        position: absolute;
+        background:$fond;
+        bottom: 0;
+        width: 100%;
+        transition: transform 0.35s ease-out;
+        transform-origin: bottom right;
+        transform: scaleX(0);
+      }
+      a:hover:before { 
+        transform: scaleX(1);
+        transform-origin: bottom left; 
       }
     }
   }
