--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,18 +15,20 @@
     <body>
         <div class="grid">
             <div class="header"></div>
-            <nav>
+            <nav class="navbar">
+            <div class="network">
+            <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+            <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+            </div>
+            <a href="/" id="logo"><img src={{asset ('baby-boy.png')}}></a>
                 <ul class="menuItems">
-
-                    <li><a id="logo" class="nav-link" href="/" >Logo</a></li>
-                    
-                    <li><a href={{path ('faq')}}>FAQ</a></li>
-                    <li><a href={{path ('quand')}}> Quand ?</a></li>
-                    <li><a href="#">Où ?</a></li>
-                    <li><a href={{path ('comment')}}>Comment ?</a></li>
-                    <li><a href="#">Pourquoi ?</a></li>
-                    <li><a href="#">Qu'est ce que le don de sang placentaire ?</a></li>
                     <li><a href={{path ('about')}}>Qui sommes nous ?</a></li>
+                    <li><a href="#">Qu'est ce que le don de sang placentaire ?</a></li>
+                    <li><a href="#">Pourquoi ?</a></li>
+                    <li><a href={{path ('comment')}}>Comment ?</a></li>
+                    <li><a href="#">Où ?</a></li>
+                    <li><a href={{path ('quand')}}> Quand ?</a></li>
+                    <li><a href={{path ('faq')}}>FAQ</a></li>
                 </ul>
             </nav>
             
@@ -35,7 +37,12 @@
             </div>
             <div class="footer"></div>
             <div class="footerContent">
-                le footer
+                <a href={{path ('about')}}>Qui sommes nous ?</a>
+                <a href="#">Mentions légales</a>
+                <a href="#">Politique de confidentialité des données</a>
+                <a href="#">Conditions d’utilisation</a>
+                <a href="#">Nous contacter</a>
+                <a href={{path ('faq')}}>F.A.Q</a>
             </div>
             
         </div>
