--- a/templates/pages/Faq.html.twig
+++ b/templates/pages/Faq.html.twig
@@ -6,7 +6,7 @@
 
 {% block stylesheets %}{% endblock %}
 
-{% block body %}Quand{% endblock %}
+{% block body %}Des questions{% endblock %}
 
 {% block javascripts %}{% endblock %}
 
