--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -23,12 +23,13 @@ html, body{
   grid-area: 1 / 1 / 2 / 4;
   background-color: $pastel;
   overflow: hidden;
-  box-shadow: 0px 3px black;
+  border-bottom: solid 3px black;
 }
 
 .main{
   grid-area: 2 / 2 / 3 / 3;
   margin-top: 2em;
+  margin-bottom: 2em;
   background-color: #fffdf0;
   font-size: 400;
   line-height: 20px;
@@ -43,13 +44,16 @@ html, body{
     font-size: 1.5em;
     margin-bottom: 1em;
   }
+  p{
+    margin-bottom: 2em;
+  }
 }
 
 .footer{
   height: 100px;
   grid-area: 3 / 1 / 4 / 4;
   background-color: $pastel;
-  box-shadow: 0px -3px black;
+  border-top: solid 3px black;
 }
 
 .footerContent{
@@ -57,12 +61,20 @@ html, body{
   font-family: 'Hind Siliguri', sans-serif;
   display: flex;
   align-items: center;
+  position: relative;
   a{
     margin-right: 1em;
     font-family: 'Karla', sans-serif;
     font-size: 1em;
     color: black;
     text-decoration: none;
+  }
+  a:hover{
+    color: rgba(0, 0, 0, 0.5);
+  }
+  p{
+    position: absolute;
+    right: 0;
   }
 }
 
@@ -73,16 +85,27 @@ html, body{
     position: absolute;
     left: 0;
     bottom: 0;
-    height: 64px;
-    width: 64px;
+    height: 100px;
+    width: 100px;
     margin: 1.5em;
+    object-fit: cover;
+    img{
+      width: 100%;
+      height: auto;
+    }
   }
   .network{
     position: absolute;
     right: 0;
     a{
-      margin-left: 0.5em;
-      margin-top: 0.75em;
+      color: black;
+      i{
+        margin-left: 0.5em;
+        margin-top: 0.75em;
+      }
+    }
+    a:hover{
+      color: rgba(0, 0, 0, 0.5);
     }
   }
   ul{
@@ -92,9 +115,6 @@ html, body{
     padding: 0;
     margin: 0;
     list-style: none;
-    /* position: -webkit-sticky;
-    position: sticky;
-    top: 0; */
     li{
       float: left;
       margin-bottom: 1.5em;
@@ -128,3 +148,57 @@ html, body{
   }
 }
 
+.accordion {
+  padding-top: 10px;
+  background-color: $fond;
+  cursor: pointer;
+  width: 25%;
+  padding: 0;
+  text-align: left;
+  border-top: solid 3px black;
+  font-family: 'Karla', sans-serif;
+  font-size: 1.25em;
+  font-weight: bold;
+  position: relative;
+}
+
+.accordion:hover{
+  background-color: transparent;
+}
+
+.accordion:before {    
+  content: "";
+  display: block;
+  height: 100%;
+  position: absolute;
+  background:$pastel;
+  bottom: 0;
+  width: 100%;
+  transition: transform 0.35s ease-out;
+  transform-origin: bottom right;
+  transform: scaleX(0);
+}
+.accordion:hover:before { 
+  transform: scaleX(1);
+  transform-origin: bottom left; 
+}
+
+.accordion:after {
+  content: '+';
+  color: black;
+  float: right;
+  margin-right: 5px;
+}
+
+.active:after {
+  content: "-";
+}
+
+.panel {
+  padding: 0;
+  margin-bottom: 2em;
+  background-color: $fond;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
