--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
-        {{ encore_entry_link_tags('/scss/base') }}
+        {{ encore_entry_link_tags('scss/base') }}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}?v=2" />
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
@@ -19,15 +19,17 @@
             <div class="network">
             <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
             <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in fa-2x"></i></i></a>
+            
             </div>
             <a href="/" id="logo"><img src={{asset ('baby-boy.png')}}></a>
                 <ul class="menuItems">
-                    <li><a href={{path ('about')}}>Qui sommes nous ?</a></li>
-                    <li><a href="#">Qu'est ce que le don de sang placentaire ?</a></li>
+                    
+                    <li><a href="#">Qu'est ce que le don ?</a></li>
                     <li><a href="#">Pourquoi ?</a></li>
                     <li><a href={{path ('comment')}}>Comment ?</a></li>
-                    <li><a href="#">Où ?</a></li>
                     <li><a href={{path ('quand')}}> Quand ?</a></li>
+                    <li><a href="#">Où ?</a></li>
                     <li><a href={{path ('faq')}}>FAQ</a></li>
                 </ul>
             </nav>
