--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,12 +40,16 @@
 
             <div class="footer"></div>
             <div class="footerContent">
-                <a href={{path ('about')}}>Qui sommes nous ?</a>
-                <a href="#">Mentions légales</a>
-                <a href="#">Politique de confidentialité</a>
-                <a href="#">Conditions d’utilisation</a>
-                <a href="#">Nous contacter</a>
-                <a href={{path ('faq')}}>F.A.Q</a>
+                <div class="footerContent1">
+                    <a href={{path ('about')}}>Qui sommes nous ?</a>
+                    <a href="#">Mentions légales</a>
+                    <a href="#">Politique de confidentialité</a>
+                </div>
+                <div class="footerContent1">
+                    <a href="#">Conditions d’utilisation</a>
+                    <a href="#">Nous contacter</a>
+                    <a href={{path ('faq')}}>F.A.Q</a>
+                </div>
                 <p>&copy Lymphobank</p>
             </div>
             
