--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -190,8 +190,8 @@ html, body{
   padding: 0;
   text-align: left;
   border-top: solid 3px black;
-  border-right:solid 3px black ;
-  box-shadow: 0px 4px 3px rgba(0, 0, 0, 0.1);
+  border-right:solid 3px black;
+  box-shadow: -2px 4px 3px rgba(0, 0, 0, 0.1);
   border-radius: 0 15px 0 0 ;
   font-family: 'Karla', sans-serif;
   font-size: 1.25em;
@@ -232,6 +232,7 @@ html, body{
   content: '+';
   color: black;
   margin-right: 15px;
+  margin-left: 30px;
   display: block;
   position: absolute;
   bottom: 5px;
@@ -245,13 +246,31 @@ html, body{
 .panel {
   margin-top: 1em;
   padding: 0;
+  padding-left: 20px;
   margin-bottom: 2em;
   background-color: $fond;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.35s ease-out;
-  
+  position: relative;
+  p{
+    margin: 0;
+    margin-bottom: 15px;
+  }
 }
+
+.panel::before{
+  content: "";
+  position: absolute;
+  border-radius: 0 0 0 15px ;
+  border-bottom: solid 3px black;
+  border-left:solid 3px black;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+}
+
 
 
 
